--- a/UI_Config.json
+++ b/UI_Config.json
@@ -202,6 +202,13 @@
 	    "label": "Level Cooldown Response",
 	    "tooltip": "Level Cooldown Response",
 	    "group": "Level"
+	},	
+	"CheckLevelInvalidResponse": {
+	    "type": "textbox",
+	    "value": "{0} does not have a valid data file",
+	    "label": "Level Invalid Response",
+	    "tooltip": "Level Invalid Response",
+	    "group": "Level"
 	},
 	"CheckLevelCooldown":{
 	    "type": "slider",
