--- a/UI_Config.json
+++ b/UI_Config.json
@@ -35,6 +35,13 @@
 	"tooltip": "Turn on Level Command",
 	"group": "General"
 	},
+	"TurnOnCheckTreasure": {
+	"type": "checkbox",
+	"value": true,
+	"label": "Turn on Treasure",
+	"tooltip": "Turn on the Treasure Command",
+	"group": "General"
+	},
   	"TurnOnCatch": {
 	"type": "checkbox",
 	"value": false,
@@ -219,6 +226,44 @@
 	    "label": "Check Level Cooldown (seconds)",
 	    "tooltip": "How long the command should go on cooldown for in (seconds)",
 	    "group": "Level"
+	},
+	"CheckTreasureCommand": {
+	    "type": "textbox",
+	    "value": "!treasure",
+	    "label": "Treasure Command",
+	    "tooltip": "Treasure Command",
+	    "group": "Treasure"
+	},
+	"CheckTreasureResponse": {
+	    "type": "textbox",
+	    "value": "{0} has {1} piles of treasure!",
+	    "label": "Treasure Response",
+	    "tooltip": "Treasure Response",
+	    "group": "Treasure"
+	},
+	"CheckTreasureCooldownResponse": {
+	    "type": "textbox",
+	    "value": "{0} the treasure command is on cooldown for {1} seconds",
+	    "label": "Treasure Cooldown Response",
+	    "tooltip": "Treasure Cooldown Response",
+	    "group": "Treasure"
+	},	
+	"CheckTreasureInvalidResponse": {
+	    "type": "textbox",
+	    "value": "{0} does not have a valid data file",
+	    "label": "Treasure Invalid Response",
+	    "tooltip": "Treasure Invalid Response",
+	    "group": "Treasure"
+	},
+	"CheckTreasureCooldown":{
+	    "type": "slider",
+	    "value": 5,
+	    "min": 1,
+	    "max": 300,
+	    "ticks": 1,
+	    "label": "Check Treasure Cooldown (seconds)",
+	    "tooltip": "How long the command should go on cooldown for in (seconds)",
+	    "group": "Treasure"
 	},
     "CatchCommand": {
         "type": "textbox",
