--- a/Settings/settings.json
+++ b/Settings/settings.json
@@ -4,6 +4,7 @@
   "TurnOnMonster": true,
   "TurnOnCheckLevel": true,
   "TurnOnCheckTreasure": true,
+  "TurnOnEquipment": true,
   "TurnOnCatch": false,
   "TurnOnBattle": false,
   "TurnOnRelease": false,
@@ -33,6 +34,11 @@
   "CheckTreasureCooldownResponse": "{0} the treasure command is on cooldown for {1} seconds",
   "CheckTreasureInvalidResponse": "{0} does not have a valid data file",
   "CheckTreasureCooldown": 60.0,
+  "EquipmentCommand": "!equipment",
+  "EquipmentResponse": "{0} has the following equipped: (head) {1}, (body) {2}, (hands) {3}, (legs) {4}, (feet) {5}, (right hand) {6}, (left hand) {7}, (back) {8}",
+  "EquipmentCooldownResponse": "{0} the equipment command is on cooldown for {1} seconds",
+  "EquipmentInvalidResponse": "{0} does not have a valid data file",
+  "EquipmentCooldown": 1.0,
   "BattleCommand": "!battle",
   "BattleResponse": "/me {5}",
   "BattleCooldownResponse": "/me {0}, the battle command is on cooldown for {1} seconds",
