--- a/Settings/settings.json
+++ b/Settings/settings.json
@@ -64,24 +64,24 @@
   "EquipResponseLocationInvalid": "The location {0} is not a valid location for a {1}",
   "EquipResponseItemNotOwned": "You do not currently own the item '{0}' so you are not able to equip it",
   "EquipCooldownResponse": "{0} the equip command is on cooldown for {1} seconds",
-  "EquipCooldown": 5,
+  "EquipCooldown": 5.0,
   "QuestCommand": "!quest",
   "QuestResponse": "A quest has been started to hunt down a {0}. Type '!join' in the chat to join the quest.",
   "QuestActiveMessage": "There is currently an active quest with {0} seconds left to join the questing party",
   "QuestCountdownMessage": "You have {0} seconds to join the questing party",
-  "QuestCountdown": 60,
+  "QuestCountdown": 20,
   "QuestPermission": "Moderator",
   "QuestPermissionInfo": "Moderator",
   "QuestPermissionResponse": "$user -> only $permission ($permissioninfo) and higher can use this command",
   "QuestInvalidMonsterResponse": "Invalid Monster Named, Selecting Random Monster",
   "QuestCooldownResponse": "{0} the quest command is currently on cooldown for {1} seconds",
-  "QuestCooldown": 300,
+  "QuestCooldown": 300.0,
   "JoinCommand": "!join",
   "JoinResponseSuccess": "{0} has joined the questing party",
   "JoinResponseNoQuest": "{0} this is currently no active quest",
   "JoinResponseFailed": "{0} is already a member of the questing party.",
   "JoinCooldownResponse": "{0} the join command is currently on cooldown for {1} seconds",
-  "JoinCooldown": 30,
+  "JoinCooldown": 30.0,
   "BattleCommand": "!battle",
   "BattleResponse": "/me {5}",
   "BattleCooldownResponse": "/me {0}, the battle command is on cooldown for {1} seconds",
@@ -133,5 +133,6 @@
   "AcceptDuelOnCooldownResponse": "/me {0} the AcceptDuel command is on cooldown for {1} seconds",
   "AcceptDuelCooldown": 1.0,
   "TurnOnAcceptDuel": false,
-  "AcceptDuelOutcomeResponse": "/me {0} and their {2} absolutely demolished {1} and their {3}!"
+  "AcceptDuelOutcomeResponse": "/me {0} and their {2} absolutely demolished {1} and their {3}!",
+  "QuestPermisson": "Moderator"
 }
