Added Rebalance Command
Added the code to get the rebalance command working.

--- a/Settings/settings.json
+++ b/Settings/settings.json
@@ -10,6 +10,7 @@
   "TurnOnEquip": true,
   "TurnOnQuest": true,
   "TurnOnJoin": true,
+  "TurnOnRebalance": true,
   "TurnOnCatch": false,
   "TurnOnBattle": false,
   "TurnOnRelease": false,
@@ -70,10 +71,10 @@
   "QuestResponse": "A quest has been started to hunt down a {0}. Type '!join' in the chat to join the quest.",
   "QuestActiveMessage": "There is currently an active quest with {0} seconds left to join the questing party",
   "QuestCountdownMessage": "You have {0} seconds to join the questing party",
-  "QuestCountdown": 20,
+  "QuestCountdown": 20.0,
   "QuestPermission": "Moderator",
   "QuestPermissionInfo": "Moderator",
-  "QuestPermissionResponse": "$user -> only $permission ($permissioninfo) and higher can use this command",
+  "QuestPermissionResponse": "{0} -> only $permission ({1}) and higher can use this command",
   "QuestInvalidMonsterResponse": "Invalid Monster Named, Selecting Random Monster",
   "QuestSuccessResponse": "The quest to slay the {0} has been successful. The questing party returns victorious!",
   "QuestFailedResponse": "The quest to slay the {0} has failed. The questing party managed to escape with their lives but return defeated.",
@@ -85,6 +86,11 @@
   "JoinResponseFailed": "{0} is already a member of the questing party.",
   "JoinCooldownResponse": "{0} the join command is currently on cooldown for {1} seconds",
   "JoinCooldown": 1.0,
+  "RebalanceCommand": "!rebalance",
+  "RebalanceResponse": "Rebalancing Complete",
+  "RebalancePermission": "Moderator",
+  "RebalancePermissionInfo": "Moderator",
+  "RebalancePermissionResp": "{0} -> only $permission ({1}) and higher can use this command",
   "BattleCommand": "!battle",
   "BattleResponse": "/me {5}",
   "BattleCooldownResponse": "/me {0}, the battle command is on cooldown for {1} seconds",
@@ -136,6 +142,5 @@
   "AcceptDuelOnCooldownResponse": "/me {0} the AcceptDuel command is on cooldown for {1} seconds",
   "AcceptDuelCooldown": 1.0,
   "TurnOnAcceptDuel": false,
-  "AcceptDuelOutcomeResponse": "/me {0} and their {2} absolutely demolished {1} and their {3}!",
-  "QuestPermisson": "Moderator"
+  "AcceptDuelOutcomeResponse": "/me {0} and their {2} absolutely demolished {1} and their {3}!"
 }
