Removed Back and Update EXP
I have removed the back slot from the equipment, and have also made it so that a player cannot have negative exp.

--- a/UI_Config.json
+++ b/UI_Config.json
@@ -556,7 +556,7 @@
 		"tooltip": "How long the until the quest will begin",
 		"group": "Quest"
 	},
-	"QuestPermisson":{
+	"QuestPermission":{
 		"type": "dropdown",
         "value": "Moderator",
         "items": ["Everyone","Regular","Subscriber","Moderator","Editor","Caster"],
