Removed Unneeded Data
Removed the variables and functions that are not needed in the encounter script.

--- a/Settings/settings.json
+++ b/Settings/settings.json
@@ -11,13 +11,6 @@
   "TurnOnQuest": true,
   "TurnOnJoin": true,
   "TurnOnRebalance": true,
-  "TurnOnCatch": false,
-  "TurnOnBattle": false,
-  "TurnOnRelease": false,
-  "TurnOnTrade": false,
-  "TurnOnAcceptTrade": false,
-  "TurnOnRefuse": false,
-  "TurnOnDuel": false,
   "PointsName": "Street Rep",
   "InvalidDataResponse": "{0} does not have a valid data file",
   "GiveLootResponse": "{0} has been rewarded with a {1}",
@@ -90,57 +83,5 @@
   "RebalanceResponse": "Rebalancing Complete",
   "RebalancePermission": "Moderator",
   "RebalancePermissionInfo": "Moderator",
-  "RebalancePermissionResp": "{0} -> only $permission ({1}) and higher can use this command",
-  "BattleCommand": "!battle",
-  "BattleResponse": "/me {5}",
-  "BattleCooldownResponse": "/me {0}, the battle command is on cooldown for {1} seconds",
-  "BattleWinChance": 75.0,
-  "BattleDeathChance": "0",
-  "BattlePointsWin": 10,
-  "BattlePointsLoss": 10,
-  "BattleMaxLevel": 100,
-  "BattleCooldown": 1.0,
-  "ReleaseCommand": "!release",
-  "ReleaseResponse": "/me {0} has released their {1}",
-  "ReleaseFailedResponse": "/me {0} does not have a {1}",
-  "ReleaseOnCooldownResponse": "/me {0}, the release command is on cooldown for {1} seconds",
-  "ReleaseCooldown": 1.0,
-  "TradeCommand": "!trade",
-  "TradeResponse": "/me {0} would like to trade their {2} for {1}'s {3}!",
-  "TradeUserNotThatMonResponse": "/me {0} does not have a ",
-  "TradeOnCooldownResponse": "/me {0}, the trade command is on cooldown for {1} seconds",
-  "TradeCooldown": 60.0,
-  "AcceptTradeCommand": "!AcceptTrade",
-  "AcceptTradeResponse": "/me {0} has Accepted their trade with {1}",
-  "AcceptTradeMissingMonResponse": "/me {0} doesn't have a {1}",
-  "AcceptTradeNoTradeFoundResponse": "/me {0} and {1} don't have an trade pending",
-  "AcceptTradeOnCooldownResponse": "/me {0} the AcceptTrade command is on cooldown for {1} seconds",
-  "AcceptTradeCooldown": 60.0,
-  "RefuseCommand": "!refuse",
-  "RefuseResponse": "/me {0} refused to trade with {1}",
-  "RefuseNotFoundResponse": "/me {0} and {1} don't have an trade pending",
-  "RefuseCooldownResponse": "/me {0} the refuse command is on cooldown for {1} seconds",
-  "RefuseCooldown": 60.0,
-  "CatchCommand": "!catch",
-  "CatchResponse": "/me {0} {1} {2}",
-  "CatchNotFoundResponse": "/me {0} didnt encounter a {1}",
-  "CatchCooldownResponse": "/me {0} the catch command is on cooldown for {1} seconds",
-  "CatchCooldown": 1.0,
-  "CatchMaxAmount": "10",
-  "CatchMaxAmountResponse": "/me {0} already has {1} Pokemon!",
-  "DuelCommand": "!duel",
-  "DuelResponse": "/me {0}'s {2} has challenged {1}'s {3} to a duel!",
-  "DuelPointsBasedOnLevel": true,
-  "DuelPointsForWin": "1.5",
-  "DuelPointsForLoss": "0.5",
-  "DuelCooldownResponse": "{0} the duel command is on cooldown for {1} seconds",
-  "DuelCooldown": 60.0,
-  "AcceptDuelCommand": "!acceptduel",
-  "AcceptDuelResponse": "/me {0} has accepted their duel with {1}",
-  "AcceptDuelMissingMonResponse": "/me {0} doesn't have a {1}",
-  "AcceptDuelNoDuelFoundResponse": "/me {0} and {1} don't have a duel pending",
-  "AcceptDuelOnCooldownResponse": "/me {0} the AcceptDuel command is on cooldown for {1} seconds",
-  "AcceptDuelCooldown": 1.0,
-  "TurnOnAcceptDuel": false,
-  "AcceptDuelOutcomeResponse": "/me {0} and their {2} absolutely demolished {1} and their {3}!"
+  "RebalancePermissionResp": "{0} -> only $permission ({1}) and higher can use this command"
 }
